a sample test of spa with scrollable pages

--- a/snappage.html
+++ b/snappage.html
@@ -39,8 +39,11 @@
                 Fourth page
             </h1>
         </section>
+        <div id="footer">Footer Content</div>
     </div>
+
     <script src="https://unpkg.com/vue@next"> </script>
     <script src="app.js"></script>
+
 </body>
 </html>
